--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
-    <title>Redirecting to Spotify Profile</title>
-    <script>
-        // Reindirizza automaticamente all’URL Spotify
-        window.location.href = "https://open.spotify.com/user/316r3whj7o74t7tu2hhpyd3hooxu";
-    </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reindirizzamento a Spotify</title>
+    <meta property="al:android:url" content="spotify://user/316r3whj7o74t7tu2hhpyd3hooxu">
+    <meta property="al:android:package" content="com.spotify.music">
+    <meta property="al:android:app_name" content="Spotify">
+    <meta property="al:ios:url" content="spotify://user/316r3whj7o74t7tu2hhpyd3hooxu">
+    <meta property="al:ios:app_store_id" content="324684580">
+    <meta property="al:ios:app_name" content="Spotify">
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://open.spotify.com/user/316r3whj7o74t7tu2hhpyd3hooxu">click here to open Spotify</a>.</p>
+    <script>
+        window.onload = function() {
+            // Prova prima il deep link diretto
+            window.location.href = 'spotify://user/316r3whj7o74t7tu2hhpyd3hooxu';
+            
+            // Fallback dopo un breve ritardo
+            setTimeout(function() {
+                window.location.href = 'https://open.spotify.com/user/316r3whj7o74t7tu2hhpyd3hooxu';
+            }, 500);
+        }
+    </script>
+    <p>Reindirizzamento a Spotify in corso...</p>
 </body>
 </html>
